# PixelForge

./: .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/source-of-truth/: HARDWARE_PROFILE.md  RESEARCH_SOURCE_OF_TRUTH.md  roles.md
memory/: CHANGELOG.md
src/: __init__.py  constants.py  main.py
src/engine/: __init__.py  device.py  face_enhancer.py  image_utils.py  model_downloader.py  model_manager.py  model_registry.py  preprocessor.py  settings.py  tiler.py  upscaler.py
src/gui/: __init__.py  compare_view.py  controls_panel.py  download_dialog.py  drop_zone.py  image_viewer.py  main_window.py  qt_utils.py  settings_dialog.py  styles.py
src/workers/: __init__.py  download_worker.py  model_load_worker.py  upscale_worker.py
tests/: __init__.py  test_constants.py  test_device.py  test_image_utils.py  test_model_registry.py  test_tiler.py
