[project]
name = "pixelforge"
version = "0.1.0"
description = "AI-powered image super-resolution — upscale low-res images to 4K+ locally"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6",
    "torch>=2.0",
    "torchvision>=0.15",
    "spandrel>=0.4",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
pixelforge = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
